...
                    android:layout_marginLeft="16px"
                    android:layout_marginRight="16px"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_profile" />

                <LinearLayout
                    android:id="@+id/add_contact_first_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16px"
                    android:layout_toRightOf="@+id/add_contact_call_first_name_icon"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/add_contact_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_first_name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:paddingBottom="16dp"
...
                    android:layout_marginLeft="16px"
                    android:layout_marginRight="16px"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_profile" />

                <LinearLayout
                    android:id="@+id/add_contact_last_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16px"
                    android:layout_toRightOf="@+id/add_contact_last_name_icon"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/add_contact_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_first_name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:paddingBottom="16dp"
...
                    android:layout_marginLeft="16px"
                    android:layout_marginRight="16px"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_call_grey" />

                <LinearLayout
                    android:id="@+id/add_contact_phone_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16px"
                    android:layout_toRightOf="@+id/add_contact_phone_icon"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/add_contact_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Phone"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:paddingBottom="16dp"
...
                    android:layout_marginLeft="16px"
                    android:layout_marginRight="16px"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_email" />

                <LinearLayout
                    android:id="@+id/add_contact_email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16px"
                    android:layout_toRightOf="@+id/add_contact_email_icon"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/add_contact_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingBottom="16dp"
...
