<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <data>

        <variable
            name="contactDetailVM"
            type="com.ryandzhunter.contact.contactdetail.ContactDetailViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:backgroundTint="#818181"
            card_view:cardCornerRadius="0dp"
            card_view:cardPreventCornerOverlap="false"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="16px"
                android:paddingStart="16px"
                android:paddingTop="26px">

                <RelativeLayout
                    android:id="@+id/contact_detail_phone_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/contact_detail_call"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="26px"
                        android:backgroundTint="@android:color/transparent"
                        android:onClick="@{()->contactDetailVM.onPhoneClick()}"
                        android:src="@drawable/ic_call_blue" />

                    <LinearLayout
                        android:id="@+id/contact_detail_phone_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16px"
                        android:layout_marginTop="26px"
                        android:layout_toEndOf="@+id/contact_detail_call"
                        android:layout_toRightOf="@+id/contact_detail_call"
                        android:orientation="vertical">

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/contact_detail_phone_number"
                            style="@style/ContactDetailTextValue"
                            android:onClick="@{()->contactDetailVM.onPhoneNumberClick()}"
                            android:text="@={contactDetailVM.mPhoneNumber}"
                            tool:text="+91 999999999" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/contact_detail_phone_title"
                            style="@style/ContactDetailTextTitle"
                            android:text="Mobile" />
                    </LinearLayout>

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="16px"
                        android:layout_marginRight="16px"
                        android:layout_marginTop="27px"
                        android:backgroundTint="@android:color/transparent"
                        android:onClick="@{()->contactDetailVM.onMessageClick()}"
                        android:src="@drawable/ic_message" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@+id/contact_detail_phone_content"
                        android:layout_marginLeft="16px"
                        android:layout_marginTop="10dp"
                        android:layout_toRightOf="@+id/contact_detail_call"
                        android:background="#E0E0E0" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/content_detail_email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="26px"
                    android:layout_marginTop="26px">

                    <ImageButton
                        android:id="@+id/contact_detail_iv_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/transparent"
                        android:onClick="@{()->contactDetailVM.onIconEmailClick()}"
                        android:src="@drawable/ic_email_blue" />

                    <LinearLayout
                        android:id="@+id/contact_detail_email_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16px"
                        android:layout_toRightOf="@+id/contact_detail_iv_email"
                        android:orientation="vertical">

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/contact_detail_email"
                            style="@style/ContactDetailTextValue"
                            android:longClickable="true"
                            android:onClick="@{()->contactDetailVM.onEmailClick()}"
                            android:text="@={contactDetailVM.mEmail}"
                            tool:text="betty_allen@gmail.com" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/contact_detail_email_title"
                            style="@style/ContactDetailTextTitle"
                            android:text="Home" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>

</layout>