...
    <string name="no_contacts_message">No Contacts Found</string>
    <string name="format_name">%1$s %2$s</string>
    <string name="alert_network_error_title">Network Error</string>
    <string name="alert_network_error_message">Unable to contact the server</string>
    <string name="progress_message">Please Wait</string>
    <string name="contact_toolbar_title">Contacts</string>
    <string name="action_favourite">Favourite</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">hint_email</string>
    <string name="hint_phone">hit_phone</string>
...
