<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="contactDetailVM"
            type="com.ryandzhunter.contact.contactdetail.ContactDetailViewModel" />

    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".contactdetail.ContactDetailActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/contact_detail_toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleGravity="left|bottom"
                app:expandedTitleMarginBottom="30dp"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="16dp"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    app:imageUrl="@{contactDetailVM.mProfilePic}"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7"
                    tools:src="@drawable/ic_betty_allen"
                    android:background="#607D8B"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp">

                    <TextView
                        android:id="@+id/contact_detail_fullname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16px"
                        android:layout_marginStart="16px"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="30dp"
                        android:text="@={contactDetailVM.mFullName}"
                        android:textColor="@android:color/white"
                        android:textSize="28sp"
                        tools:text="Betty Allen" />
                </RelativeLayout>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/contact_detail_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    app:layout_collapseMode="pin"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />

            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <include
            layout="@layout/contact_detail_content"
            bind:contactDetailVM="@{contactDetailVM}" />

    </android.support.design.widget.CoordinatorLayout>

</layout>